Pass URL as a system parameter

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,4 @@ deploy:
     repo: Patrick-Willis/SeriesStalker
 
 after-deploy:
-  - script: "mvn -f ./AcceptanceTests verify"
+  - script: "mvn -f ./AcceptanceTests verify -Durl=https://seriesstalker.herokuapp.com"
